<resources>
    <string name="app_name">Basic Calculator</string>
    <string name="plus">+</string>
    <string name="Zero">0</string>
    <string name="Point">.</string>
    <string name="Equal">=</string>
    <string name="Three">3</string>
    <string name="Two">2</string>
    <string name="Minus">-</string>
    <string name="Clear">C</string>
    <string name="Six">6</string>
    <string name="Five">5</string>
    <string name="Multiply">X</string>
    <string name="Nine">9</string>
    <string name="Eight">8</string>
    <string name="One">1</string>
    <string name="TwoZero">00</string>
    <string name="Four">4</string>
    <string name="Seven">7</string>
    <string name="Divide">/</string>
    <string name="ClearOne"><![CDATA[<]]></string>
    <string name="Modulus">%</string>
</resources>